@@ -1,11 +1,13 @@
+set(COMMON "${CMAKE_HOME_DIRECTORY}/src/common")
+
 # Set sources
-set(SRC main.cpp)
+set(SRC main.cpp  ${COMMON}/report.c)
 
 # Find X11
 pkg_check_modules(X11 x11 REQUIRED)
 
 # Set include dirs
-include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${X11_INCLUDE_DIRS})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${X11_INCLUDE_DIRS} ${COMMON})
 
 # Hide all symbols except the ones explicitly exported in the code (like main())
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden -fPIC")
@@ -13,8 +15,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden -fPIC")
 # Link as position independent executable
 set(CMAKE_EXE_LINKER_FLAGS "-pie -rdynamic")
 
-# Set C++ flags
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+# Set C flags because of report.c
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden -fPIC")
 
 # Set link libraries
 link_libraries(${X11_LDFLAGS})
